maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:3: error: not found: value fin
  fin=false
  ^RandomMouseMaze:4: error: not found: value fin
  while(fin==false)
        ^RandomMouseMaze:15: error: not found: value fin
  fin=true
  ^